testing/framework/resources/Advanced/Failing/mondrian/query6282.e
USA	CA	Redwood City	8830	Juan Bradley	Juan Bradley	F	S	High School Degree	$30K - $50K
